default/objects/CCS_Order__c/CCS_Order__c.object-meta.xml
<CustomObject>
    <description>CCS Order custom object for all orders from Merlin.</description>
    <label>CCS Order</label>
    <nameField>
        <label>CCS Order</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCS Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>