default/objects/CCS_Order__c/fields/Accident_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Accident_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accident Insurance</label>
    <type>Checkbox</type>
</CustomField>