default/objects/CCS_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CCS Orders</relationshipLabel>
    <relationshipName>CCS_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>