default/objects/CCS_Order__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>