default/objects/CCS_Order__c/fields/Account_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Account_Prefix__c</fullName>
    <label>Account Prefix</label>
    <length>6</length>
    <type>Text</type>
</CustomField>