default/objects/CCS_Order__c/fields/Additional_Order__c.field-meta.xml
<CustomField>
    <fullName>Additional_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Order</label>
    <type>Checkbox</type>
</CustomField>