default/objects/CCS_Order__c/fields/Bank_Sort_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Sort_Code__c</fullName>
    <label>Bank Sort Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>