default/objects/CCS_Order__c/fields/Basic_Configuration_Price__c.field-meta.xml
<CustomField>
    <fullName>Basic_Configuration_Price__c</fullName>
    <label>Basic Configuration Price</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>