default/objects/CCS_Order__c/fields/BIC_SWIFT__c.field-meta.xml
<CustomField>
    <fullName>BIC_SWIFT__c</fullName>
    <label>BIC/SWIFT</label>
    <length>15</length>
    <type>Text</type>
</CustomField>