default/objects/CCS_Order__c/fields/Billing_Company_Individual_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Company_Individual_Name__c</fullName>
    <label>Billing Company/Individual Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>