default/objects/CCS_Order__c/fields/Billing_House_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_House_Number__c</fullName>
    <label>Billing House Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>