default/objects/CCS_Order__c/fields/Bulk_Charging__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Charging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bulk Charging</label>
    <type>Checkbox</type>
</CustomField>