default/objects/CCS_Order__c/fields/Card_Issuance_Price__c.field-meta.xml
<CustomField>
    <fullName>Card_Issuance_Price__c</fullName>
    <label>Card Issuance Price</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>