default/objects/CCS_Order__c/fields/CCS_DD_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>CCS_DD_Account_Number__c</fullName>
    <label>CCS DD Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>