default/objects/CCS_Order__c/fields/CCS_MerlinID__c.field-meta.xml
<CustomField>
    <fullName>CCS_MerlinID__c</fullName>
    <externalId>true</externalId>
    <label>CCS Merlin ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>