default/objects/CCS_Order__c/fields/Collection_Limit__c.field-meta.xml
<CustomField>
    <fullName>Collection_Limit__c</fullName>
    <label>Collection Limit</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>