default/objects/CCS_Order__c/fields/Company_Individual_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Individual_Name__c</fullName>
    <label>Company/Individual Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>