default/objects/CCS_Order__c/fields/Company_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Number__c</fullName>
    <label>Company Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>