default/objects/CCS_Order__c/fields/Cribis_Offer__c.field-meta.xml
<CustomField>
    <fullName>Cribis_Offer__c</fullName>
    <label>Cribis Offer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>