default/objects/CCS_Order__c/fields/Eco_Fee__c.field-meta.xml
<CustomField>
    <fullName>Eco_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Eco Fee program enrollment.</description>
    <inlineHelpText>Eco Fee program enrollment.</inlineHelpText>
    <label>Eco Fee</label>
    <type>Checkbox</type>
</CustomField>