default/objects/CCS_Order__c/fields/Financial_Credit__c.field-meta.xml
<CustomField>
    <fullName>Financial_Credit__c</fullName>
    <label>Financial Credit</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>