default/objects/CCS_Order__c/fields/GFN_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>GFN_Customer_Number__c</fullName>
    <label>GFN Customer Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>