default/objects/CCS_Order__c/fields/GPRS_Roaming__c.field-meta.xml
<CustomField>
    <fullName>GPRS_Roaming__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GPRS Roaming</label>
    <type>Checkbox</type>
</CustomField>