default/objects/CCS_Order__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>CCS Orders</relationshipLabel>
    <relationshipName>CCS_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>