default/objects/CCS_Order__c/fields/Merlin_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Merlin_Last_Modified_By__c</fullName>
    <description>Used to set the Last Modified By Email address for sending BO notifications.</description>
    <label>Merlin Last Modified By</label>
    <type>Email</type>
</CustomField>