default/objects/CCS_Order__c/fields/Merlin_License__c.field-meta.xml
<CustomField>
    <fullName>Merlin_License__c</fullName>
    <description>License number from Merlin.</description>
    <inlineHelpText>License number which is automatically transferred from Merlin.</inlineHelpText>
    <label>Merlin License #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>