default/objects/CCS_Order__c/fields/Merlin_Login_ID__c.field-meta.xml
<CustomField>
    <fullName>Merlin_Login_ID__c</fullName>
    <label>Merlin Login ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>