default/objects/CCS_Order__c/fields/Merlin_Login_Name__c.field-meta.xml
<CustomField>
    <fullName>Merlin_Login_Name__c</fullName>
    <label>Merlin Login Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>