default/objects/CCS_Order__c/fields/Merlin_Partner__c.field-meta.xml
<CustomField>
    <fullName>Merlin_Partner__c</fullName>
    <description>Partner name from Merlin.</description>
    <inlineHelpText>Partner name which is automatically transferred from Merlin.</inlineHelpText>
    <label>Merlin Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CCS/FLEETCOR</fullName>
            </value>
            <value>
                <fullName>CESKAPOSTA</fullName>
            </value>
            <value>
                <fullName>INNOGY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>