default/objects/CCS_Order__c/fields/MOL_Discount__c.field-meta.xml
<CustomField>
    <fullName>MOL_Discount__c</fullName>
    <label>MOL Discount</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>