default/objects/CCS_Order__c/fields/Monthly_Bill_Email__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Bill_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly Bill - Email</label>
    <type>Checkbox</type>
</CustomField>