default/objects/CCS_Order__c/fields/Monthly_Bill_Post__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Bill_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly Bill - Post</label>
    <type>Checkbox</type>
</CustomField>