default/objects/CCS_Order__c/fields/Monthly_Fixed_Card_Payment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Fixed_Card_Payment__c</fullName>
    <label>Monthly Fixed Card Payment</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>