default/objects/CCS_Order__c/fields/Name_on_the_Cards__c.field-meta.xml
<CustomField>
    <fullName>Name_on_the_Cards__c</fullName>
    <label>Name on the Cards</label>
    <length>100</length>
    <type>Text</type>
</CustomField>