default/objects/CCS_Order__c/fields/Note_CC__c.field-meta.xml
<CustomField>
    <fullName>Note_CC__c</fullName>
    <label>Note CC</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>