default/objects/CCS_Order__c/fields/Note_CCS__c.field-meta.xml
<CustomField>
    <fullName>Note_CCS__c</fullName>
    <label>Note CCS</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>