default/objects/CCS_Order__c/fields/Number_of_Card_Variants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Card_Variants__c</fullName>
    <label>Number of Card Variants</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>