default/objects/CCS_Order__c/fields/Number_of_Cards__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cards__c</fullName>
    <label>Number of Cards</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>