default/objects/CCS_Order__c/fields/Number_of_GPS_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_GPS_Units__c</fullName>
    <label>Number of GPS Units</label>
    <summaryForeignKey>Vozidlo_CCS_Carnet__c.CCS_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>