default/objects/CCS_Order__c/fields/Number_of_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Vehicles__c</fullName>
    <label>Number of Vehicles</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>