default/objects/CCS_Order__c/fields/Offer_Type__c.field-meta.xml
<CustomField>
    <fullName>Offer_Type__c</fullName>
    <label>Offer Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Limit Standard</fullName>
            </value>
            <value>
                <fullName>CCS Limit INDIVIDUAL</fullName>
            </value>
            <value>
                <fullName>CCS LIMIT ESO!</fullName>
            </value>
            <value>
                <fullName>CCS Limit ESO</fullName>
            </value>
            <value>
                <fullName>CCS Limit Celá síť</fullName>
            </value>
            <value>
                <fullName>CCS Limit Moje síť</fullName>
            </value>
            <value>
                <fullName>CCS Limit Moje síť/M4</fullName>
            </value>
            <value>
                <fullName>CCS Limit Štandard</fullName>
            </value>
            <value>
                <fullName>CCS Limit Moja sieť</fullName>
            </value>
            <value>
                <fullName>CCS Limit Celá sieť</fullName>
            </value>
            <value>
                <fullName>Limit+</fullName>
            </value>
            <value>
                <fullName>Limit+ Mini</fullName>
            </value>
            <value>
                <fullName>Limit+ Mini3</fullName>
            </value>
            <value>
                <fullName>Bonus</fullName>
            </value>
            <value>
                <fullName>Bonus+</fullName>
            </value>
            <value>
                <fullName>Carnet výhodně</fullName>
            </value>
            <value>
                <fullName>Sada KOMPLET</fullName>
            </value>
            <value>
                <fullName>Carnet 10+ za 1Kč</fullName>
            </value>
            <value>
                <fullName>Carnet 5+ks za 1Kč!</fullName>
            </value>
            <value>
                <fullName>Carnet za 1 Kč</fullName>
            </value>
            <value>
                <fullName>1+1 Zdarma</fullName>
            </value>
            <value>
                <fullName>2+1 Zdarma</fullName>
            </value>
            <value>
                <fullName>CCS Carnet s předplacenou kartou na PHM s nábojem 1500 Kč zdarma!</fullName>
            </value>
            <value>
                <fullName>Carnet výhodne</fullName>
            </value>
            <value>
                <fullName>Carnet 5+ks za 1 EUR!</fullName>
            </value>
            <value>
                <fullName>Carnet 10ks+ za 1 EUR!</fullName>
            </value>
            <value>
                <fullName>Carnet za 1 EUR</fullName>
            </value>
            <value>
                <fullName>1+1 zadarmo</fullName>
            </value>
            <value>
                <fullName>CCS Carnet s predplatenou kartou na 50 EUR</fullName>
            </value>
            <value>
                <fullName>CCS Carnet s predplatenou kartou na 40 EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>