default/objects/CCS_Order__c/fields/Old_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_ID__c</fullName>
    <externalId>true</externalId>
    <label>Old ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>