default/objects/CCS_Order__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>CCS Orders</relationshipLabel>
    <relationshipName>CCS_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>