default/objects/CCS_Order__c/fields/Order_Note__c.field-meta.xml
<CustomField>
    <fullName>Order_Note__c</fullName>
    <label>Order Note</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>