default/objects/CCS_Order__c/fields/Order_PDF_link__c.field-meta.xml
<CustomField>
    <fullName>Order_PDF_link__c</fullName>
    <label>Order PDF link</label>
    <type>Url</type>
</CustomField>