default/objects/CCS_Order__c/fields/Order_Stage__c.field-meta.xml
<CustomField>
    <fullName>Order_Stage__c</fullName>
    <label>Order Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Nová</fullName>
            </value>
            <value>
                <fullName>Schváleno</fullName>
            </value>
            <value>
                <fullName>Schváleno nové</fullName>
            </value>
            <value>
                <fullName>Předáno na K.O.</fullName>
            </value>
            <value>
                <fullName>Předáno na Sales</fullName>
            </value>
            <value>
                <fullName>Čekáme na zadání karet</fullName>
            </value>
            <value>
                <fullName>Čekáme na komponenty</fullName>
            </value>
            <value>
                <fullName>Čekáme na dodatek</fullName>
            </value>
            <value>
                <fullName>Čekáme na PM</fullName>
            </value>
            <value>
                <fullName>Čekáme na výkazy</fullName>
            </value>
            <value>
                <fullName>Čekáme na potvrzení o inkasu</fullName>
            </value>
            <value>
                <fullName>Čekáme na podpis objednávky</fullName>
            </value>
            <value>
                <fullName>Čekáme na mandát</fullName>
            </value>
            <value>
                <fullName>Neschváleno-častější inkaso</fullName>
            </value>
            <value>
                <fullName>Neschváleno-depozit-nepotvrdí</fullName>
            </value>
            <value>
                <fullName>Neschváleno-depozit-nedá</fullName>
            </value>
            <value>
                <fullName>Neschváleno-depozit</fullName>
            </value>
            <value>
                <fullName>Neschváleno</fullName>
            </value>
            <value>
                <fullName>Nepotvrzeno</fullName>
            </value>
            <value>
                <fullName>Zadáno do systému</fullName>
            </value>
            <value>
                <fullName>Zadaná přiobjednávka</fullName>
            </value>
            <value>
                <fullName>Balíček Carnet-záměna karet</fullName>
            </value>
            <value>
                <fullName>Stornováno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>