default/objects/CCS_Order__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rozpracováno</fullName>
            </value>
            <value>
                <fullName>Objednáno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>