default/objects/CCS_Order__c/fields/OZ_Number__c.field-meta.xml
<CustomField>
    <fullName>OZ_Number__c</fullName>
    <label>OZ Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>