default/objects/CCS_Order__c/fields/Packaging_Type__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Type__c</fullName>
    <description>&quot;Dárkové balení&quot; on CCS forms.</description>
    <label>Packaging Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Without gift packaging</fullName>
            </value>
            <value>
                <fullName>Christmas gift packaging</fullName>
            </value>
            <value>
                <fullName>Birthday gift packaging</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>