default/objects/CCS_Order__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash on delivery</fullName>
            </value>
            <value>
                <fullName>Proforma invoice</fullName>
            </value>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>