default/objects/CCS_Order__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CCS Limit</fullName>
            </value>
            <value>
                <fullName>CCS Limit SK</fullName>
            </value>
            <value>
                <fullName>CCS Limit+</fullName>
            </value>
            <value>
                <fullName>CCS Limit+ SK</fullName>
            </value>
            <value>
                <fullName>CCS Bonus</fullName>
            </value>
            <value>
                <fullName>CCS Bonus SK</fullName>
            </value>
            <value>
                <fullName>CCS Bonus+</fullName>
            </value>
            <value>
                <fullName>CCS Bonus+ SK</fullName>
            </value>
            <value>
                <fullName>CCS Bonus Fleet</fullName>
            </value>
            <value>
                <fullName>CCS Bonus Fleet SK</fullName>
            </value>
            <value>
                <fullName>CCS Carnet</fullName>
            </value>
            <value>
                <fullName>CCS Carnet SK</fullName>
            </value>
            <value>
                <fullName>CCS Carnet OBD2</fullName>
            </value>
            <value>
                <fullName>CCS Carnet OBD2 SK</fullName>
            </value>
            <value>
                <fullName>CCS Carnet Služba</fullName>
            </value>
            <value>
                <fullName>CCS Carnet Služba SK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>