default/objects/CCS_Order__c/fields/Product_Country__c.field-meta.xml
<CustomField>
    <fullName>Product_Country__c</fullName>
    <label>Product Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CZ</fullName>
            </value>
            <value>
                <fullName>SK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>