default/objects/CCS_Order__c/fields/Selected_Petrol_Stations__c.field-meta.xml
<CustomField>
    <fullName>Selected_Petrol_Stations__c</fullName>
    <label>Selected Petrol Stations</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>