default/objects/CCS_Order__c/fields/Shipping_Company_Individual_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Company_Individual_Name__c</fullName>
    <label>Shipping Company/Individual Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>