default/objects/CCS_Order__c/fields/Shipping_House_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipping_House_Number__c</fullName>
    <label>Shipping House Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>