default/objects/CCS_Order__c/fields/Shipping_Type__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Type__c</fullName>
    <description>&quot;Způsob doručení&quot; on CCS forms.</description>
    <label>Shipping Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
            <value>
                <fullName>Pickup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>