default/objects/CCS_Order__c/fields/T_C_Agree__c.field-meta.xml
<CustomField>
    <fullName>T_C_Agree__c</fullName>
    <defaultValue>false</defaultValue>
    <label>T&amp;C Agree</label>
    <type>Checkbox</type>
</CustomField>