default/objects/CCS_Order__c/fields/Update_From_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Update_From_Opportunity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Is the update of the CCS Order coming from Opportunity or Merlin?</description>
    <label>Update From Opportunity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>