default/objects/CCS_Order__c/fields/Variable_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Variable_Symbol__c</fullName>
    <description>Used to store Variable Symbol from CCS Bonus, CCS Bonus+, CCS Bonus Fleet (CZ and SK) orders.</description>
    <label>Variable Symbol</label>
    <length>15</length>
    <type>Text</type>
</CustomField>