default/objects/CCS_Order__c/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <label>VAT</label>
    <length>12</length>
    <type>Text</type>
</CustomField>