default/objects/CCS_Order__c/recordTypes/CCS_Bonus.recordType-meta.xml
<RecordType>
    <fullName>CCS_Bonus</fullName>
    <active>true</active>
    <description>CCS Bonus Record Type for CCS Order.</description>
    <label>CCS Bonus</label>
</RecordType>