default/objects/CCS_Order__c/recordTypes/CCS_Carnet.recordType-meta.xml
<RecordType>
    <fullName>CCS_Carnet</fullName>
    <active>true</active>
    <description>CCS Carnet Record Type for CCS Order.</description>
    <label>CCS Carnet</label>
</RecordType>