default/objects/CCS_Order__c/recordTypes/CCS_Limit.recordType-meta.xml
<RecordType>
    <fullName>CCS_Limit</fullName>
    <active>true</active>
    <description>CCS Limit Record Type for CCS Order.</description>
    <label>CCS Limit</label>
</RecordType>