default/objects/CCS_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CCS_MerlinID__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OZ_Number__c</columns>
    <columns>Company_Number__c</columns>
    <columns>Billing_Company_Individual_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Offer_Type__c</columns>
    <columns>Number_of_Cards__c</columns>
    <columns>Number_of_Vehicles__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>